vlib/v/checker/tests/immutable_array_var.out
vlib/v/checker/tests/immutable_array_var.v:3:2: error: `a` is immutable, declare it with `mut` to append items to it
    1| fn main() {
    2|     a := [1, 2]
    3|     a << 3
           ^
    4| }
